--- a/Qiy Node API.html
+++ b/Qiy Node API.html
@@ -2987,15 +2987,24 @@ font-style: italic;
 
     <h3 class="field-label">Return type</h3>
     <div class="return-type">
+      <a href="#ServiceCredentialsModel">ServiceCredentialsModel</a>
       
-      ServiceCrendentialsModel
     </div>
 
     <!--Todo: process Response Object and its headers, schema, examples -->
 
     <h3 class="field-label">Example data</h3>
     <div class="example-data-content-type">Content-Type: application/json</div>
-    <pre class="example"><code>""</code></pre>
+    <pre class="example"><code>{
+  "credentials" : "{}",
+  "links" : {
+    "self" : "http://example.com/aeiou",
+    "source" : "http://example.com/aeiou"
+  },
+  "state" : "state",
+  "activeFrom" : 0,
+  "activeUntil" : 6
+}</code></pre>
 
     <h3 class="field-label">Produces</h3>
     This API call produces the following media types according to the <span class="header">Accept</span> request header;
@@ -3007,7 +3016,7 @@ font-style: italic;
     <h3 class="field-label">Responses</h3>
     <h4 class="field-label">200</h4>
     The status code of a success response will be 200.
-        <a href="#ServiceCrendentialsModel">ServiceCrendentialsModel</a>
+        <a href="#ServiceCredentialsModel">ServiceCredentialsModel</a>
   </div> <!-- method -->
   <hr/>
   <div class="method"><a name="serviceCredentialsUrlPatch"/>
