--- a/Qiy Node API.html
+++ b/Qiy Node API.html
@@ -3558,7 +3558,7 @@ font-style: italic;
     <div class="field-items">
       <div class="param">activeFrom </div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Active from date time stamp. format: Unix time in ms</div>
 <div class="param">activeUntil </div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Active until date time stamp. format: Unix time in ms, nullable</div>
-<div class="param">links (optional)</div><div class="param-desc"><span class="param-type"><a href="#LibraryModel_links">LibraryModel_links</a></span>  </div>
+<div class="param">links </div><div class="param-desc"><span class="param-type"><a href="#LibraryModel_links">LibraryModel_links</a></span>  </div>
 <div class="param">state </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> State of the library. </div>
     </div>  <!-- field-items -->
   </div>
