--- a/Qiy Node API.html
+++ b/Qiy Node API.html
@@ -370,8 +370,8 @@ font-style: italic;
   "links" : {
     "serviceType" : "http://example.com/aeiou",
     "provider" : "http://example.com/aeiou",
-    "serviceDescriptor" : "http://example.com/aeiou",
-    "self" : "http://example.com/aeiou"
+    "self" : "http://example.com/aeiou",
+    "serviceDescriptor" : "http://example.com/aeiou"
   },
   "state" : "state",
   "activeFrom" : 0,
@@ -3422,10 +3422,10 @@ font-style: italic;
     <h3><a name="CatalogueServiceModel_links"><code>CatalogueServiceModel_links</code> - </a> <a class="up" href="#__Models">Up</a></h3>
     <div class='model-description'>Catalogue Service links.</div>
     <div class="field-items">
-      <div class="param">serviceDescriptor (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Service Descriptor. format: url</div>
-<div class="param">serviceType (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Service type, defined using a Library Service url. format: url</div>
-<div class="param">provider </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Provider url format: url</div>
+      <div class="param">provider </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Provider url format: url</div>
 <div class="param">self </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Catalogue Service url format: url</div>
+<div class="param">serviceDescriptor </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Service Descriptor. format: url</div>
+<div class="param">serviceType </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Service type, defined using a Library Service url. format: url</div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
