Added text/html as production mime type
for operations that produce Library data.

--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -359,6 +359,7 @@ font-style: italic;
     the media type will be conveyed by the <span class="heaader">Content-Type</span> response header.
     <ul>
       <li><code>application/json</code></li>
+      <li><code>text/html</code></li>
     </ul>
 
     <h3 class="field-label">Responses</h3>
@@ -442,6 +443,7 @@ font-style: italic;
     the media type will be conveyed by the <span class="heaader">Content-Type</span> response header.
     <ul>
       <li><code>application/json</code></li>
+      <li><code>text/html</code></li>
     </ul>
 
     <h3 class="field-label">Responses</h3>
@@ -484,6 +486,7 @@ font-style: italic;
     the media type will be conveyed by the <span class="heaader">Content-Type</span> response header.
     <ul>
       <li><code>application/json</code></li>
+      <li><code>text/html</code></li>
     </ul>
 
     <h3 class="field-label">Responses</h3>
@@ -1601,6 +1604,7 @@ font-style: italic;
     the media type will be conveyed by the <span class="heaader">Content-Type</span> response header.
     <ul>
       <li><code>application/json</code></li>
+      <li><code>text/html</code></li>
     </ul>
 
     <h3 class="field-label">Responses</h3>
@@ -1674,6 +1678,7 @@ font-style: italic;
     the media type will be conveyed by the <span class="heaader">Content-Type</span> response header.
     <ul>
       <li><code>application/json</code></li>
+      <li><code>text/html</code></li>
     </ul>
 
     <h3 class="field-label">Responses</h3>
@@ -1716,6 +1721,7 @@ font-style: italic;
     the media type will be conveyed by the <span class="heaader">Content-Type</span> response header.
     <ul>
       <li><code>application/json</code></li>
+      <li><code>text/html</code></li>
     </ul>
 
     <h3 class="field-label">Responses</h3>
@@ -1814,6 +1820,7 @@ font-style: italic;
     the media type will be conveyed by the <span class="heaader">Content-Type</span> response header.
     <ul>
       <li><code>application/json</code></li>
+      <li><code>text/html</code></li>
     </ul>
 
     <h3 class="field-label">Responses</h3>
@@ -1896,6 +1903,7 @@ font-style: italic;
     the media type will be conveyed by the <span class="heaader">Content-Type</span> response header.
     <ul>
       <li><code>application/json</code></li>
+      <li><code>text/html</code></li>
     </ul>
 
     <h3 class="field-label">Responses</h3>
@@ -1978,6 +1986,7 @@ font-style: italic;
     the media type will be conveyed by the <span class="heaader">Content-Type</span> response header.
     <ul>
       <li><code>application/json</code></li>
+      <li><code>text/html</code></li>
     </ul>
 
     <h3 class="field-label">Responses</h3>
@@ -2097,6 +2106,7 @@ font-style: italic;
     the media type will be conveyed by the <span class="heaader">Content-Type</span> response header.
     <ul>
       <li><code>application/json</code></li>
+      <li><code>text/html</code></li>
     </ul>
 
     <h3 class="field-label">Responses</h3>
@@ -2139,6 +2149,7 @@ font-style: italic;
     the media type will be conveyed by the <span class="heaader">Content-Type</span> response header.
     <ul>
       <li><code>application/json</code></li>
+      <li><code>text/html</code></li>
     </ul>
 
     <h3 class="field-label">Responses</h3>
