--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -1889,6 +1889,7 @@ font-style: italic;
     <div class="example-data-content-type">Content-Type: application/json</div>
     <pre class="example"><code>{
   "links" : {
+    "accessProvider" : "http://example.com/aeiou",
     "providerDescription" : "http://example.com/aeiou",
     "self" : "http://example.com/aeiou",
     "services" : "http://example.com/aeiou"
@@ -4015,7 +4016,8 @@ font-style: italic;
     <h3><a name="PublishedProviderModel_links"><code>PublishedProviderModel_links</code> - </a> <a class="up" href="#__Models">Up</a></h3>
     <div class='model-description'>Published Provider links.</div>
     <div class="field-items">
-      <div class="param">providerDescription </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Service Provider description (serviceProviderUrl). format: url</div>
+      <div class="param">accessProvider </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Access Provider (accessProviderUrl). format: url</div>
+<div class="param">providerDescription </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Service Provider description (serviceProviderUrl). format: url</div>
 <div class="param">self </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Published Provider url (publishedProviderUrl) format: url</div>
 <div class="param">services </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Published Services url (publishedServicesUrl). format: url</div>
     </div>  <!-- field-items -->
