--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -2871,7 +2871,16 @@ font-style: italic;
 
     <h3 class="field-label">Example data</h3>
     <div class="example-data-content-type">Content-Type: application/json</div>
-    <pre class="example"><code>{ }</code></pre>
+    <pre class="example"><code>{
+  "persistentIds" : [ { }, { } ],
+  "links" : {
+    "provider" : "http://example.com/aeiou",
+    "self" : "http://example.com/aeiou"
+  },
+  "state" : "state",
+  "activeFrom" : 0,
+  "activeUntil" : 6
+}</code></pre>
 
     <h3 class="field-label">Produces</h3>
     This API call produces the following media types according to the <span class="header">Accept</span> request header;
@@ -4114,6 +4123,7 @@ font-style: italic;
   <h3>Table of Contents</h3>
   <ol>
     <li><a href="#AccountModel"><code>AccountModel</code> - </a></li>
+    <li><a href="#AccountModel_links"><code>AccountModel_links</code> - </a></li>
     <li><a href="#AccountsModel"><code>AccountsModel</code> - </a></li>
     <li><a href="#ApiModel"><code>ApiModel</code> - </a></li>
     <li><a href="#CandidatesModel"><code>CandidatesModel</code> - </a></li>
@@ -4146,6 +4156,7 @@ font-style: italic;
     <li><a href="#OperationSpecificationModel"><code>OperationSpecificationModel</code> - </a></li>
     <li><a href="#OperationSpecificationModel_headers"><code>OperationSpecificationModel_headers</code> - </a></li>
     <li><a href="#OperationsModel"><code>OperationsModel</code> - </a></li>
+    <li><a href="#PersistentIdModel"><code>PersistentIdModel</code> - </a></li>
     <li><a href="#PortfolioModel"><code>PortfolioModel</code> - </a></li>
     <li><a href="#PortfolioModel_links"><code>PortfolioModel_links</code> - </a></li>
     <li><a href="#PublishedProviderModel"><code>PublishedProviderModel</code> - </a></li>
@@ -4180,7 +4191,20 @@ font-style: italic;
     <h3><a name="AccountModel"><code>AccountModel</code> - </a> <a class="up" href="#__Models">Up</a></h3>
     <div class='model-description'>Account Model.</div>
     <div class="field-items">
-          </div>  <!-- field-items -->
+      <div class="param">activeFrom </div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Active from date time stamp. format: Unix time in ms</div>
+<div class="param">activeUntil </div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Active until date time stamp. format: Unix time in ms, nullable</div>
+<div class="param">links </div><div class="param-desc"><span class="param-type"><a href="#AccountModel_links">AccountModel_links</a></span>  </div>
+<div class="param">persistentIds (optional)</div><div class="param-desc"><span class="param-type"><a href="#PersistentIdModel">array[PersistentIdModel]</a></span> Persistent Ids. </div>
+<div class="param">state </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> State of the account. </div>
+    </div>  <!-- field-items -->
+  </div>
+  <div class="model">
+    <h3><a name="AccountModel_links"><code>AccountModel_links</code> - </a> <a class="up" href="#__Models">Up</a></h3>
+    <div class='model-description'>Catalogue links.</div>
+    <div class="field-items">
+      <div class="param">provider </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Service Provider (publishedProviderUrl). format: url</div>
+<div class="param">self </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Account (accountUrl) format: url</div>
+    </div>  <!-- field-items -->
   </div>
   <div class="model">
     <h3><a name="AccountsModel"><code>AccountsModel</code> - </a> <a class="up" href="#__Models">Up</a></h3>
@@ -4450,6 +4474,12 @@ font-style: italic;
   <div class="model">
     <h3><a name="OperationsModel"><code>OperationsModel</code> - </a> <a class="up" href="#__Models">Up</a></h3>
     <div class='model-description'>List of Operations.</div>
+    <div class="field-items">
+          </div>  <!-- field-items -->
+  </div>
+  <div class="model">
+    <h3><a name="PersistentIdModel"><code>PersistentIdModel</code> - </a> <a class="up" href="#__Models">Up</a></h3>
+    <div class='model-description'>See <a href="https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#persistent-id">Persistent Id</a>.</div>
     <div class="field-items">
           </div>  <!-- field-items -->
   </div>
