--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -4200,7 +4200,7 @@ font-style: italic;
   </div>
   <div class="model">
     <h3><a name="AccountModel_links"><code>AccountModel_links</code> - </a> <a class="up" href="#__Models">Up</a></h3>
-    <div class='model-description'>Catalogue links.</div>
+    <div class='model-description'>Account links.</div>
     <div class="field-items">
       <div class="param">provider </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Service Provider (publishedProviderUrl). format: url</div>
 <div class="param">self </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Account (accountUrl) format: url</div>
