Updated Operation model

--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -4437,7 +4437,7 @@ font-style: italic;
 <div class="param">links </div><div class="param-desc"><span class="param-type"><a href="#OperationModel_links">OperationModel_links</a></span>  </div>
 <div class="param">reference (optional)</div><div class="param-desc"><span class="param-type"><a href="#OperationReferenceModel">OperationReferenceModel</a></span>  </div>
 <div class="param">specification (optional)</div><div class="param-desc"><span class="param-type"><a href="#OperationSpecificationModel">OperationSpecificationModel</a></span>  </div>
-<div class="param">state </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> State of the library. </div>
+<div class="param">state </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> State of the Operation. </div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
