Fixed api: one error and one warning

--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -4641,7 +4641,7 @@ font-style: italic;
 <div class="param">dataService (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Data Service (publishedServiceUrl). format: url</div>
 <div class="param">operations (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Operations (operationsUrl). format: url</div>
 <div class="param">self </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Source (sourceUrl) format: url</div>
-<div class="param">serviceCredentials </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Service Credentials (serviceCredentialsUrl). format: url</div>
+<div class="param">serviceCredentials (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Service Credentials (serviceCredentialsUrl). format: url</div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
